Bug 318737 - Powerdevil doesn't suspend with latest refactoring
Summary: Powerdevil doesn't suspend with latest refactoring
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-22 20:25 UTC by Hrvoje Senjan
Modified: 2013-04-24 18:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2013-04-22 20:25:32 UTC
Using latest master. As described in summary. The issue is valid for GUI suspend, 
qdbus org.kde.Solid.PowerManagement /org/kde/Solid/PowerManagement/Actions/SuspendSession org.kde.Solid.PowerManagement.Actions.SuspendSession.suspendToRam

works as expected.  Also qdbus --system org.freedesktop.login1 /org/freedesktop/login1 org.freedesktop.login1.Manager.Suspend true  works.
Using systemd (202 version)

Reproducible: Always

Steps to Reproduce:
1. Try to suspend with krunner/kickoff/etc

Actual Results:  
System doesn't suspend

Expected Results:  
Should suspend

Probably caused by 63e9e0.
Powevdevil says it's initialized
kded(730) PowerDevil::Core::onBackendReady: Backend is ready, KDE Power Management system initialized
kded(730) PowerDevil::Core::onDeviceAdded: A new battery was detected
kded(730) PowerDevil::PolicyAgent::onSessionHandlerRegistered: Session path: "/org/freedesktop/login1/session/_32"
kded(730) PowerDevil::PolicyAgent::onSessionHandlerRegistered: ACTIVE SESSION PATH: "/org/freedesktop/login1/session/_32"
kded(730) PowerDevil::PolicyAgent::onActiveSessionChanged: Current session is now active
kded(730) PowerDevil::PolicyAgent::setupSystemdInhibition: fd passing available: true
kded(730) PowerDevil::PolicyAgent::setupSystemdInhibition: systemd powersave events handling inhibited, descriptor: 22
kded(730) PowerDevil::PolicyAgent::onSessionHandlerRegistered: systemd support initialized

No kdebugs when trying to suspend via kickoff, etc
Comment 1 Hrvoje Senjan 2013-04-24 18:05:48 UTC
Git commit ad805b504eb3ddec063a3e9060a6d07180232a47 by Hrvoje Senjan.
Committed on 24/04/2013 at 20:02.
Pushed by hrvojes into branch 'master'.

Move away suspend, hibernate and ResumingfromSuspend actions from using Solids DBus service to Solid::PowerManagement

Kdelibs provides a method already for them, and Solid's interface
can change over time

REVIEW: 110135

M  +2    -1    kcontrol/randr/module/randrmonitor.cpp
M  +2    -10   ksmserver/screenlocker/greeter/greeterapp.cpp
M  +2    -10   ksmserver/shutdowndlg.cpp
M  +7    -34   plasma/desktop/applets/kickoff/core/itemhandlers.cpp
M  +1    -1    plasma/generic/dataengines/time/CMakeLists.txt
M  +3    -1    plasma/generic/dataengines/time/timeengine.cpp
M  +2    -2    plasma/generic/runners/powerdevil/PowerDevilRunner.cpp

http://commits.kde.org/kde-workspace/ad805b504eb3ddec063a3e9060a6d07180232a47