Move away suspend, hibernate and ResumingfromSuspend actions from using Solids DBus service to Solid::PowerManagement

Kdelibs provides a method already for them, and Solid's interface
can change over time

REVIEW: 110135
BUG: 318737